<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
        <modelVersion>4.0.0</modelVersion>
        <groupId>com.jack</groupId>
        <artifactId>Jack</artifactId>
        <version>1.0-SNAPSHOT</version>
        <packaging>jar</packaging>
        <properties>
		<junit.version>4.10</junit.version>
		<maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
		<maven-failsafe-plugin.version>2.18.1</maven-failsafe-plugin.version>
		<guava.version>18.0</guava.version>
		<lombok.version>1.16.4</lombok.version>
		<slf4j.version>1.7.12</slf4j.version>
		<logback.version>1.1.3</logback.version>
		<mockito.version>1.9.5</mockito.version>
		<compiler.version> 3.1 </compiler.version>
		<jarBuilder.version>2.6</jarBuilder.version>
        <jarExec.version>1.2.1</jarExec.version>
		<java.version> 1.8 </java.version>
		<powermock-api-mockito.version>1.5</powermock-api-mockito.version>
		<powermock-core.version>1.5</powermock-core.version>
		<powermock-module-junit4.version>1.5</powermock-module-junit4.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<jaxb.version>2.2.4</jaxb.version>
		<ini4j.version>0.5.4</ini4j.version>
		<jcabi.version>0.22.5</jcabi.version>
	</properties>

	<repositories>
		<repository>
			<id>oss.sonatype.org</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
		</repository>
	</repositories>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
			</dependency>

			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>

			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-all</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.powermock</groupId>
				<artifactId>powermock-api-mockito</artifactId>
				<version>${powermock-api-mockito.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.powermock</groupId>
				<artifactId>powermock-core</artifactId>
				<version>${powermock-core.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.powermock</groupId>
				<artifactId>powermock-module-junit4</artifactId>
				<version>${powermock-module-junit4.version}</version>
				<scope>test</scope>
			</dependency>
					
			<dependency> 
				<groupId>javax.xml.bind</groupId> 
				<artifactId>jaxb-api</artifactId>
				<version>${jaxb.version}</version> 
			</dependency> 
			<dependency>
				<groupId>org.ini4j</groupId>
				<artifactId>ini4j</artifactId>
				<version>${ini4j.version}</version>
			</dependency>
			
			<dependency>
				<groupId>com.jcabi</groupId>
				<artifactId>jcabi-aspects</artifactId>
				<version>${jcabi.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
			<dependency> 
				<groupId>javax.xml.bind</groupId> 
				<artifactId>jaxb-api</artifactId>
			</dependency> 		
			<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.ini4j</groupId>
			<artifactId>ini4j</artifactId>
		</dependency>
		<dependency>
			<groupId>com.jcabi</groupId>
			<artifactId>jcabi-aspects</artifactId>
		</dependency>		
	</dependencies>

	<build>
		<defaultGoal>test</defaultGoal>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
					<configuration>
						<argLine>-Xms512m -Xmx756m -XX:MaxPermSize=128M</argLine>
						<includes>
							<include>%regex[.*Test.*]</include>
							<include>%regex[.*IT.*]</include>
						</includes>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>${maven-failsafe-plugin.version}</version>
					<configuration>
						<argLine>-Xms512m -Xmx3056m -XX:MaxPermSize=128m</argLine>
						<includes>
							<include>%regex[.*IT.*]</include>
						</includes>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${compiler.version}</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${jarBuilder.version}</version>
					<configuration>
						<archive>
							<manifest>
								<mainClass>com.jack.address.MainApp</mainClass>
							</manifest>
                                                        <manifestEntries>
                                                            <Class-Path>../plugins/</Class-Path>
                                                        </manifestEntries>
						</archive>
						<descriptorRefs>
							<descriptorRef>jar-with-dependencies</descriptorRef>
						</descriptorRefs>
					</configuration>
				</plugin>
                                <plugin>
                                    <groupId>org.codehaus.mojo</groupId>
                                    <artifactId>exec-maven-plugin</artifactId>
                                    <version>${jarExec.version}</version>
                                    <configuration>
                                        <mainClass>com.jack.address.MainApp</mainClass>
                                    </configuration>
                                </plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
			</plugin>
                        <plugin>
                                <groupId>org.codehaus.mojo</groupId>
                                <artifactId>exec-maven-plugin</artifactId>
                        </plugin>
		</plugins>
	</build>
</project>